--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
       <section>
         <h2>Reactive</h2>
-        <div class="framed drop-5">
+        <div class="drop-5">
           <p>
             Declarative way of reacting to changes
           </p>
@@ -34,7 +34,7 @@
 
       <section>
         <h2>ReactiveX</h2>
-        <div class="framed drop-5">
+        <div class="drop-5">
           <p>
             API for asynchronous programming with observable streams
           </p>
@@ -43,7 +43,7 @@
 
       <section>
         <h2>ReactiveX Implementations</h2>
-        <div class="framed drop-5">
+        <div class="drop-5">
           <ul>
             <li>
               Java: RxJava
@@ -67,8 +67,29 @@
         </div>
       </section>
       <section>
+        <h2 style="display:none">Streams streams everywhere</h2>
+        <img src="https://media.makeameme.org/created/streams-streams-everywhere.jpg" />
+      </section>
+      <section>
+        <h2>Streams</h2>
+        <p>
+          In Reactive Programming: Think of it as some special kind of a collection
+        </p>
+        <p class="down-5">
+          (Pull) Iterable stream, Single = Function, Multiple = Iterator
+        </p>
+        <p class="down-5">
+          (Push) Observable stream, Single = Promise/Task, Multiple = Observable
+        </p>
+      </section>
+      <section>
+        <h2>The observable ball stream</h2>
+        <iframe data-autoplay="" width="640" height="480" src="https://www.youtube.com/embed/hLYMD6R6PvU?rel=0&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1"
+          frameborder="0" allowfullscreen=""></iframe>
+      </section>
+      <section>
         <h2>RxJS</h2>
-        <div class="framed drop-5">
+        <div class="drop-5">
           <p>
             Library for composing asynchronous and event-based programs by using observable sequences.
           </p>
@@ -92,41 +113,55 @@
         <p class="smallest"><span class="tt">https://en.wikipedia.org/wiki/Iterator_pattern</span></p>
       </section>
       <section>
-        <h2 style="display:none">Streams streams everywhere</h2>
-        <img src="https://media.makeameme.org/created/streams-streams-everywhere.jpg" />
+        <h2>API</h2>
+        <div class="down-2 row">
+          <pre class="javascript col-60"><code data-trim>
+            public class Observable {
+              Subscription subscribe(Observer observer) { ... }
+            }
+            
+            public interface Observer {
+              void onCompleted();
+              void onError(error);
+              void onNext(value);
+            }
+            
+            public interface Subscription {
+              void unsubscribe();
+              boolean isUnsubscribed();
+            }
+
+            public class Subject implements Observable {
+              void next(value);
+              void complete();
+              void error(error);
+            }
+      </code></pre>
+        </div>
       </section>
       <section>
-        <h2>Streams</h2>
-        <p>
-          In Reactive Programming: Think of it as some special kind of a collection
-        </p>
-        <p class="down-5">
-          (Pull) Iterable stream, Single = Function, Multiple = Iterator
-        </p>
-        <p class="down-5">
-          (Push) Observable stream, Single = Promise/Task, Multiple = Observable
-        </p>
+        <h2>Operators with RxJS Marbles</h2>
+        <div class="down-3">
+          <p><span style="font-weight: bold">Creational</span>: from, interval, of, timer</p>
+          <p><span style="font-weight: bold">Conditional</span>: every</p>
+          <p><span style="font-weight: bold">Combination</span>: combineLatest, concat, merge</p>
+          <p><span style="font-weight: bold">Filtering</span>: filter, find, first, last, skip, take, debounce, throttle</p>
+          <p><span style="font-weight: bold">Mathematical</span>: count, max, min</p>
+          <p><span style="font-weight: bold">Chaining</span>: pipe</p>
+          <p>http://rxmarbles.com/</p>
+        </div>
       </section>
       <section>
-        <h2>The observable ball stream</h2>
-        <iframe data-autoplay="" width="640" height="480" src="https://www.youtube.com/embed/hLYMD6R6PvU?rel=0&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1"
-          frameborder="0" allowfullscreen=""></iframe>
+        <h2>Cold vs. Hot observable</h2>
+        <div class="down-3">
+          <p>Cold = Values are always getting newly created in the observable</p>
+          <p>Hot = Every subscription gets the same value (shared)</p>
+        </div>
       </section>
       <section>
-        <h2>Terminology in RxJS</h2>
-        <div class="framed drop-5">
-          <p><span style="font-weight: bold">Observable</span>: represents the idea of an invokable collection of
-            future values or events.</p>
-          <p><span style="font-weight: bold">Observer</span>: is a collection of callbacks that knows how to listen to
-            values delivered by the Observable.</p>
-          <p><span style="font-weight: bold">Subscription</span>: represents the execution of an Observable, is
-            primarily useful for cancelling the execution.</p>
-          <p><span style="font-weight: bold">Operators</span>: are pure functions that enable a functional programming
-            style of dealing with collections with operations like map, filter, concat, flatMap, etc.</p>
-          <p><span style="font-weight: bold">Subject</span>: is the equivalent to an EventEmitter, and the only way of
-            multicasting a value or event to multiple Observers.</p>
-          <p><span style="font-weight: bold">Schedulers</span>: are centralized dispatchers to control concurrency,
-            allowing us to coordinate when computation happens on e.g. setTimeout or requestAnimationFrame or others.</p>
+        <h2>LearnRxJS Code Examples</h2>
+        <div class="down-3">
+          <p>https://www.learnrxjs.io/</p>
         </div>
       </section>
     </div>
